# swc_macro_sys

./: .cursorignore  .env  .gitignore  AGENTS.md  CHANGELOG.md  CHUNK_CHARACTERISTICS_SCHEMA.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_AUDIT.md  OPTIMIZATION_ANALYSIS.md  PRD_TREE_SHAKING_WASM.md  README.md  TESTING.md  WEBPACK_CHUNK_CLASSIFICATION.md  ci-test.sh  debug_macro_processing.cjs  extract_webpack_dependencies.rs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-debug-preserve.js  test-entry-preserve.js  test-final-comprehensive.js  test-no-treeshake.js  test-rspack-lodash-optimization.js  test-simple-fix.js  test-simple-treeshaker.js  test-simple.js  test-trace-issue.js  test-treeshaker-debug.js  test-wasm.js  test-webpack-debug.js  webpack_all_chunks_dependencies_report.md
crates/swc_macro_condition_transform/: Cargo.toml
crates/swc_macro_condition_transform/src/: meta_data.rs
crates/swc_macro_condition_transform/tests/: condition_test.rs
crates/swc_macro_wasm/: Cargo.toml  README.md
crates/swc_macro_wasm/examples/: transform.rs
crates/swc_macro_wasm/src/: cache.rs  config.rs  convergence.rs  dce.rs  error.rs  lib.rs  macro_transformer_debug.rs  multi_pass_debug_tests.rs  multi_pass_tests.rs  optimize.rs  optimize_new.rs  performance.rs  simple_tree_shake.rs  webpack_parser.rs  webpack_tree_shaker.rs  webpack_tree_shaker_fix.rs
crates/swc_macro_wasm/tests/: antd_tree_shake_fixture_test.rs  cjs_tree_shaking_tests.rs  commonjs_module_removal_test.rs  dead_module_removal_test.rs  dependency_graph_basic_tests.rs  dependency_graph_tests.rs  dependency_tree_realworld_tests.rs  dot_notation_format_test.rs  enhanced_parser_test.rs  federation_integration_test.rs  federation_scenarios_test.rs  federation_tree_shaking_test.rs  federation_tree_shaking_test_summary.md  full_optimization_flow_tests.rs  integration_test_cases.rs  integration_tests.rs  javascript_parity_test.cjs  jsonp_reachability_react_test.rs  lodash_export_removal_test.rs  lodash_module_removal_test.rs  lodash_orphan_detection_test.rs  macro_content_removal_test.rs  macro_pruning_test.rs  macro_undefined_condition_kept_test.rs  module_federation_lodash_test.rs  module_federation_vendor_chunk_test.rs  object_key_validation_test.rs  optimization_pipeline_test.rs  optimize_pruning_test.rs  optimize_with_prune_result_tests.rs  react_chartjs2_macro_tree_shake_test.rs  react_dom_regression_test.rs  react_dom_scheduler_wasm_test.rs  react_mf_host_chunk_suite.rs  react_mf_remote_chunk_suite.rs  react_redux_integrity_test.rs  real_chunk_fixtures_test.rs  rspack_bundle_tests.rs  rspack_cjs_lodash_test.rs  rspack_lodash_treeshake_test.rs  (+15 more)
crates/webpack_analyzer_v2/: ARCHITECTURE.md  Cargo.toml  README.md  README_EXPLICIT_ENTRY_POINTS.md  TECHNICAL_GUIDE.md  TREE_SHAKING_DESIGN.md
crates/webpack_analyzer_v2/src/: analyzer.rs  analyzer_original.rs  chunk.rs  dependency_graph.rs  lib.rs  module.rs  tests.rs  tree_shaker.rs
crates/webpack_analyzer_v2/tests/: additional_edge_cases_test.rs  antd_chunk_analysis_test.rs  chunk_cases_test.rs  configuration_driven_optimization_test.rs  dependency_graph_edge_cases.rs  full_graph_test.rs  react_dom_host_scheduler_preserve_test.rs  react_dom_like_graph_test.rs  react_dom_scheduler_preserve_test.rs  real_world_test.rs  require_detection_test.rs  rspack_annotated_output_integration_test.rs  rspack_cjs_integration_test.rs  webpack_esm_integration_test.rs
crates/webpack_chunk_tree_shaker/: Cargo.toml  README.md  TECHNICAL_GUIDE.md
crates/webpack_chunk_tree_shaker/src/: error.rs  lib.rs  optimization.rs  reconstruction.rs  shaker.rs  validation.rs
scripts/: ci.sh
(+281 files in other folders)
