[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
regex = "1.11.1"
serde_json = "1.0.140"
swc_core = { version = "26.0.0" }

swc_macro_condition_transform = { path = "./crates/swc_macro_condition_transform" }
swc_macro_parser = { path = "./crates/swc_macro_parser" }
webpack_analyzer_v2 = { path = "./crates/webpack_analyzer_v2" }
webpack_chunk_tree_shaker = { path = "./crates/webpack_chunk_tree_shaker" }
