[package]
name = "swc_macro_wasm"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
swc_common = "11.0.3"
swc_core = { workspace = true, features = ["ecma_codegen"] }
swc_ecma_ast = "11.0.0"
swc_ecma_codegen = "13.2.0"
swc_ecma_parser = "14.0.1"
swc_ecma_transforms_base = "15.1.0"
wasm-bindgen = "0.2.100"
serde_json = { workspace = true }

swc_macro_condition_transform = { workspace = true }
swc_macro_parser = { workspace = true }
webpack_graph = { workspace = true }
indexmap = "2.9.0"
petgraph = "0.8.2"
swc_atoms = "5.0.0"
rustc-hash = "2.1.1"
swc_ecma_utils = "15.0.2"
swc_ecma_visit = "11.0.0"
tracing = "0.1.41"
