[package]
name = "webpack_chunk_tree_shaker"
version = "0.1.0"
edition = "2021"

[dependencies]
webpack_analyzer_v2 = { path = "../webpack_analyzer_v2" }
rustc-hash = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
regex = "1.10"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }