[package]
name = "webpack_chunk_tree_shaker"
version = "0.1.0"
edition = "2021"

[dependencies]
webpack_analyzer_v2 = { path = "../webpack_analyzer_v2" }
serde_json = "1.0"
thiserror = "2.0"
regex = "1.10"
swc_core = { workspace = true, features = ["common"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }